[package]
name = "tc-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1"
futures = "0.3"
destream = "0.10"
destream_json = "0.15"
pathlink = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tc-error = "0.13"
tc-ir = { path = "../tc-ir" }
tc-value = { path = "../tc-value" }
umask = "2.1"

[dev-dependencies]
once_cell = "1"

[[example]]
name = "hello_wasm"
path = "examples/hello_wasm.rs"
crate-type = ["cdylib"]
